--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/mediterranian_baked_chicken.html">Easy Mediterranian Baked Chicken Recipe</a></li>
+            
+        </ul>
+        
     </body>
 </html>
