--- a/recipes/mediterranian_baked_chicken.html
+++ b/recipes/mediterranian_baked_chicken.html
@@ -6,5 +6,46 @@
     </head>
     <body>
         <h1>Easy Mediterranian Baked Chicken Breast Recipe</h1>
+        <img src="./mediterranian.webp" width="350" height="350">
+        <h2>Description</h2>
+        <p>One of our go-to recipes for chicken breast that we 
+            make often during the week because it's so easy. Chicken 
+            breast gets marinated in Mediterranean flavors like lemon 
+            juice, olive oil, and herbs and then baked in the oven.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 (8 ounce) skinless, boneless chicken breasts</li>
+            <li>salt and freshly ground black pepper</li>
+            <li>1/4 cup olive oil</li>
+            <li>1/4 cup freshly squeezed lemon juice</li>
+            <li>1 clove garlic, minced</li>
+            <li>1/2 teaspoon dried oregano, or more to taste</li>
+            <li>1/4 teaspoon dried thyme, or more to taste</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>
+                <p>Season chicken breasts with salt and pepper on all 
+                    sides and place in a bowl or lidded container. Combine 
+                    olive oil, lemon juice, garlic, oregano, and thyme in 
+                    a small bowl and pour marinade over chicken breasts. 
+                    Marinate for 10 minutes at room temperature.</p>
+            </li>
+            <li>
+                <p>Preheat oven to 400 degrees F (200 degrees C). Set one 
+                    oven rack about 6 inches from the heat source.</p>
+            </li>
+            <li>
+                <p>Place chicken breasts into a baking dish and pour 
+                    marinade on top.</p>
+            </li>
+            <li>
+                <p>Bake chicken on the middle rack of the preheated oven 
+                    until no longer pink in the center and the juices run
+                     clear, 35 to 45 minutes, depending upon thickness. 
+                     Move baking dish to the top rack and broil chicken 
+                     until well browned, about 5 minutes.</p>
+            </li>
+        </ol>
     </body>
 </html>
