--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/mediterranian_baked_chicken.html">Easy Mediterranian Baked Chicken Recipe</a></li>
-            <li></li>
+            <li><a href="recipes/mediterranian_baked_chicken.html">Easy Mediterranian Baked Chicken Recipe</a>
+                <br><br>
+            <img src="./recipes/mediterranian.webp" height="250" width="250">
+            </li>
+            <li><a href="recipes/fried_rice.html">Island-Style Fried Rice Recipe</a>
+            <br><br>
+            <img src="./recipes/fried-rice.webp" height="250" width="250">
+            </li>
+            <li><a href="recipes/cooker_cokctail.html">Slow Cooker Cocktail Smokies Recipe</a>
+            <br><br>
+            <img src="./recipes/slow-cooker-cocktail.webp" height="250" width="250">
+            </li>
         </ul>
         
     </body>
